--- a/LazyCsharp/LazyCsharp.csproj
+++ b/LazyCsharp/LazyCsharp.csproj
@@ -13,15 +13,16 @@
     <PackageIcon>logo_lazydb.png</PackageIcon>
     <PackageIconUrl />
     <NeutralLanguage>en-150</NeutralLanguage>
-    <AssemblyVersion>0.1.0.6</AssemblyVersion>
-    <FileVersion>0.1.0.6</FileVersion>
+    <AssemblyVersion>0.1.0.7</AssemblyVersion>
+    <FileVersion>0.1.0.7</FileVersion>
     <RepositoryType>Github</RepositoryType>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.6</Version>
+    <Version>1.0.7</Version>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
+    <PackageReleaseNotes>Integration of the security system and patching of a small bug</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
