--- a/LazyCsharp/LazyCsharp.csproj
+++ b/LazyCsharp/LazyCsharp.csproj
@@ -13,16 +13,16 @@
     <PackageIcon>logo_lazydb.png</PackageIcon>
     <PackageIconUrl />
     <NeutralLanguage>en-150</NeutralLanguage>
-    <AssemblyVersion>0.1.0.8</AssemblyVersion>
-    <FileVersion>0.1.0.8</FileVersion>
+    <AssemblyVersion>0.1.0.9</AssemblyVersion>
+    <FileVersion>0.1.0.9</FileVersion>
     <RepositoryType>Github</RepositoryType>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.8</Version>
+    <Version>1.0.9</Version>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
-    <PackageReleaseNotes>Update integration of the security system</PackageReleaseNotes>
+    <PackageReleaseNotes>New syntax, addition of features</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
